<resources>
    <string name="app_name">Sprind</string>

    <!-- Toolbar -->
    <string name="select_address">Укажите адрес</string>
    <string name="search">Поиск</string>

    <!-- Card -->
    <string name="buy">Купить</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Search screen -->
    <string name="search_history">История</string>
    <string name="clear">очистить</string>

    <!-- Not found screen -->
    <string name="there_is_no_such_products">Такого товара нет :(</string>
    <string name="there_is_no_such_products_description">К сожалению мы не знаем про такой товар, вероятно вы ошиблись. Проверьте название или измените фильтры</string>

    <!-- Bad connection screen -->
    <string name="bad_connection">Проблемы с подключением</string>
    <string name="bad_connection_description">Кажется, произошел сбой, повторите попытку позже</string>
    <string name="about_product">О товаре</string>
    <string name="not_available">Пока недоступно</string>
    <string name="main_screen_title">Главная</string>
    <string name="favorites_screen_title">Избранное</string>
    <string name="cart_screen_title">Корзина</string>
    <string name="profile">Профиль</string>
    <string name="about_shop">Магазин</string>
    <string name="about_category">Категория</string>
    <string name="characteristics">Характеристики</string>
    <string name="promocode">Промокод</string>
    <string name="promocode_input_hint">Введите промокод</string>
    <string name="delivery">Доставка</string>
    <string name="products">Товары</string>
    <string name="discount">Скидка</string>
    <string name="summary">Итого</string>
    <string name="empty_cart_warning">Корзина пуста</string>
    <string name="empty_cart_description">Загляните в поиск и возвращайтесь когда что-нибудь найдете!</string>
    <string name="pay">Оплатить</string>
    <string name="authorization_screen_title">Авторизация</string>
    <string name="input_login_hint">Логин</string>
    <string name="input_password_hint">Пароль</string>
    <string name="enter_to_account">Войти</string>
    <string name="start_registration">Зарегистрироваться</string>
    <string name="reset_password">Восстановить пароль</string>
    <string name="registration_screen_title">Регистрация</string>
    <string name="registration_term_warning">Регистрируясь, Вы соглашаетесь с политикой компании</string>
    <string name="input_secret_hint">Секретное слово</string>
    <string name="new_password_screen_title">Новый пароль</string>
    <string name="input_new_password_hint">Новый пароль</string>
    <string name="input_verify_new_password_hint">Подтверждение пароля</string>
    <string name="change_password">Сменить пароль</string>
    <string name="recovery_password_screen_title">Восстановление пароля</string>
    <string name="name">Имя</string>
    <string name="second_name">Фамилия</string>
    <string name="telephone">Телефон</string>
    <string name="email">Почта</string>
    <string name="continue_reg">Продолжить</string>
    <string name="all_reviews">Все отзывы</string>
    <string name="someting_goes_wrong_hint">Что-то пошло не так, попробуйте позже</string>
    <string name="thanks_screen_title">Спасибка!</string>
    <string name="thanks_for_buying_text"><b>Спасибо за покупку!</b>\nВаш заказ сформирован и оплачен, в ближайшее время мы начнем его сборку и отправку!</string>
    <string name="orders">Заказы</string>
    <string name="reviews">Отзывы</string>
    <string name="favorites">Избранное</string>
    <string name="logout_from_account">Выйти из аккаунта</string>
    <string name="login_account">Войти в аккаунт</string>
    <string name="company_copyright">© 2024 ООО «Point»\nПроект компании Point</string>
    <string name="greetings">Здравствуйте, %s</string>
    <string name="authorize_warning">Авторизуйтесь, чтобы продолжить</string>
    <string name="authorize">Авторизоваться</string>
    <string name="empty_favorites_warning">Тут пусто...</string>
    <string name="empty_favorites_description">У вас нет ни одного товара в избранном, перейдите к странице поиска и добавьте сюда несколько товаров, а затем прикупите их.</string>
    <string name="advantage">Достоинства:</string>
    <string name="disadvantage">Недостатки:</string>
    <string name="commentary">Комментарий:</string>
    <string name="city">Город</string>
    <string name="address_selection">Выбор адреса</string>
    <string name="input_street_hint">Улица</string>
    <string name="input_house_hint">Дом</string>
    <string name="input_flat_hint">Квартира</string>
    <string name="podverdit">Подвтердить</string>
    <string name="about_app">О приложении</string>
    <string name="about_sprind"><b>Sprind</b> - некоммерчиский пет проект в сфере маркетплейсов, является проектом с открытым исходным кодом и доступом.\n\nПолный функционал приложения доступен только при установке и настройке дополнительного компонента - <b>SprindServer</b>\n\nРегистрация, использующаяся в приложении, работает вместе с другим проектом с открытым исходным кодом и доступом на сервере <b>SprindServer</b>.</string>
    <string name="yandex_maps_terms"><a href="https://yandex.ru/legal/maps_termsofuse/">Ссылка на «Условия использование Яндекс.Карт»</a></string>
    <string name="field_can_not_be_empty">Поле не может быть пустым</string>
    <string name="rating_hint">Рейтинг</string>
    <string name="add">Добавить</string>
    <string name="wrong_credentials">Неправильный логин или пароль</string>
    <string name="create_review_title">Создайте отзыв</string>
    <string name="use_dark_theme">Использовать темную тему</string>
    <string name="order_summary_price">Цена заказа: %s</string>
    <string name="order_products_price">Цена товаров: %s</string>
    <string name="orders_delivery_price">Цена доставки: %S</string>
    <string name="order_id">Заказ #%s</string>
    <string name="delete_from_cart">Удалить из корзины</string>
    <string name="to_cart">К корзине</string>
    <string name="product_not_found">Такого товара нет</string>
    <string name="we_are_trying_to_find">Мы не нашли товаров по такому запросу, попробуйте сфорулировать запрос заново</string>

    <string name="products_in_favorite">Товары в избранном</string>
    <string name="categories">Популярные категории</string>
    <string name="shops">Популярные магазины</string>
    <string name="input_promocode">Введите промокод</string>
</resources>