<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingHorizontal="44dp"
    android:paddingBottom="60dp">

    <TextView
        android:id="@+id/address_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/bold_18"
        android:text="@string/address_selection"/>

    <EditText
        android:id="@+id/input_city"
        style="@style/regular_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/authorization_input_background"
        android:hint="@string/city"
        android:inputType="text"
        android:paddingHorizontal="10dp"
        android:paddingVertical="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address_selection" />

    <EditText
        android:id="@+id/input_street"
        style="@style/regular_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/authorization_input_background"
        android:hint="@string/input_street_hint"
        android:inputType="text"
        android:paddingHorizontal="10dp"
        android:paddingVertical="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_city" />

    <EditText
        android:id="@+id/input_house"
        style="@style/regular_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/authorization_input_background"
        android:hint="@string/input_house_hint"
        android:inputType="text"
        android:paddingHorizontal="10dp"
        android:paddingVertical="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_street" />

    <EditText
        android:id="@+id/input_flat"
        style="@style/regular_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/authorization_input_background"
        android:hint="@string/input_flat_hint"
        android:inputType="text"
        android:paddingHorizontal="10dp"
        android:paddingVertical="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_house" />

    <Button
        android:id="@+id/select_button"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:text="@string/podverdit"
        app:layout_constraintTop_toBottomOf="@id/input_flat"/>


</androidx.constraintlayout.widget.ConstraintLayout>