<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_surface"
    tools:context=".presenter.profile.main.ProfileFragment">

    <ru.point.sprind.view.TitleToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:text="@string/profile" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/greetings"
        style="@style/bold_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:text="Добрый день, Иван Демин"
        tools:visibility="visible" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/orders"
        style="@style/regular_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/card_background_full"
        android:paddingHorizontal="12dp"
        android:paddingVertical="20dp"
        android:paddingStart="20dp"
        android:text="@string/orders"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greetings" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/favorites"
        style="@style/regular_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/card_background_full"
        android:paddingHorizontal="12dp"
        android:paddingVertical="20dp"
        android:paddingStart="20dp"
        android:text="@string/favorites"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orders" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/about_app"
        style="@style/regular_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/card_background_full"
        android:paddingHorizontal="12dp"
        android:paddingVertical="20dp"
        android:paddingStart="20dp"
        android:text="@string/about_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favorites" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/theme_switch"
        style="@style/regular_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/card_background_full"
        android:paddingHorizontal="12dp"
        android:paddingVertical="20dp"

        android:text="@string/use_dark_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_app" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/logout"
        style="@style/regular_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/card_background_full"
        android:paddingHorizontal="12dp"
        android:paddingVertical="20dp"
        android:paddingStart="20dp"
        android:text="@string/logout_from_account"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/theme_switch" />

</androidx.constraintlayout.widget.ConstraintLayout>